--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,20 +19,21 @@
 
 :root {
   /* Brand Colors */
-  --cream: #f5f4f0;
+  --cream: #F0EDEB;
   --text-dark: #2a2a2a;
   --text-light: #666;
   
   /* Note Colors */
-  --note-green: #E4E5E4;
-  --note-blue: #DAE2E5;
-  --note-beige: #F0EAE3;
+  --note-green: #E3E5E3;
+  --note-blue: #D3E3E9;
+  --note-beige: #F5E9DB;
   --note-white: #ffffff;
+  --light-gray: #B8B9B9;
   
   /* Note Secondary Colors */
-  --note-green-secondary: #828A82;
-  --note-blue-secondary: #869DA6;
-  --note-beige-secondary: #BAAEA1;
+  --note-green-secondary: #3EB2D1;
+  --note-blue-secondary: #2FC6CB;
+  --note-beige-secondary: #EAA95D;
   
   /* Shadow */
   --note-shadow: -6px 61px 17px 0px rgba(4, 2, 1, 0.00), -4px 39px 16px 0px rgba(4, 2, 1, 0.01), -2px 22px 13px 0px rgba(4, 2, 1, 0.03), -1px 10px 10px 0px rgba(4, 2, 1, 0.04), 0px 2px 5px 0px rgba(4, 2, 1, 0.05);
